--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
   "workbench.editorAssociations": {
     "*.md": "vscode.markdown.preview.editor"
   },
-  "cSpell.words": ["Annnouncement"]
+  "cSpell.words": ["Annnouncement", "devcontainer", "devcontainers", "esbenp"]
 }
